--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
         
-        <item name="colorButtonNormal">@color/primary</item>
+        <item name="colorButtonNormal">@color/accent</item>
         <item name="colorControlHighlight">@color/primary_dark</item>
         
     </style>
