--- a/app/src/main/res/layout/fragment_courses.xml
+++ b/app/src/main/res/layout/fragment_courses.xml
@@ -6,8 +6,9 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/tviCourse"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="COURSES" />
+        android:text="COURSES:\n" />
 
 </FrameLayout>
