--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.brunoaybar.unofficalupc.modules.attendance.AttendanceFragment">
+    tools:context="com.brunoaybar.unofficalupc.modules.attendance.AbsencesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
