--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="secondary_text">#757575</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
+    <color name="white">#FFFFFF</color>
 
     <color name="material_green">#8BC34A</color>
     <color name="material_amber">#FFC107</color>
