--- a/app/src/main/res/menu/classmates.xml
+++ b/app/src/main/res/menu/classmates.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_classmates"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/action_classmates"
+        android:icon="@drawable/ic_people_outline_white_24dp"
+        app:showAsAction="always" />
 </menu>
