--- a/app/src/main/res/layout/fragment_timetable.xml
+++ b/app/src/main/res/layout/fragment_timetable.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.brunoaybar.unofficalupc.modules.timetable.TimetableFragment">
 
 
@@ -11,6 +12,10 @@
         android:layout_height="80dp"
         android:background="#eee"
         />
+
+    <com.brunoaybar.unofficalupc.modules.timetable.DayScheduleView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
