--- a/app/src/main/res/layout/view_day_schedule.xml
+++ b/app/src/main/res/layout/view_day_schedule.xml
@@ -18,8 +18,7 @@
         <RelativeLayout
             android:id="@+id/rlaEvents"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#22ff0000"/>
+            android:layout_height="wrap_content"/>
 
     </RelativeLayout>
 
