--- a/app/src/main/res/layout/fragment_timetable.xml
+++ b/app/src/main/res/layout/fragment_timetable.xml
@@ -8,6 +8,7 @@
 
 
     <com.brunoaybar.unofficalupc.modules.timetable.WeekDatePicker
+        android:id="@+id/weekDatePicker"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="#fff"
