--- a/app/src/main/res/layout/view_schedule_event.xml
+++ b/app/src/main/res/layout/view_schedule_event.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="96dp"
+    android:layout_height="wrap_content"
     android:background="@android:color/transparent"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,7 +21,7 @@
             android:paddingLeft="8dp">
 
             <com.brunoaybar.unofficalupc.components.base.BaseTextView
-                android:id="@+id/tviCode"
+                android:id="@+id/tviCodeAndSection"
                 android:layout_width="match_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_height="wrap_content"
