Add loader to classmates activity

--- a/app/src/main/res/layout/activity_classmates.xml
+++ b/app/src/main/res/layout/activity_classmates.xml
@@ -30,11 +30,19 @@
 
         </android.support.design.widget.AppBarLayout>
 
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rviClassmates"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <include layout="@layout/progress_bar"/>
+        </RelativeLayout>
+
     </android.support.design.widget.CoordinatorLayout>
 
 
