--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -1,13 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rviAbsences"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.brunoaybar.unofficalupc.modules.attendance.AbsencesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="ATTENDANCE" />
-
-</FrameLayout>
+</android.support.v7.widget.RecyclerView>
