--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/option_logout"
         android:title="@string/option_logout"
-        android:icon="@drawable/ic_logout_24dp"
+        android:icon="@drawable/ic_logout"
         app:showAsAction="always"/>
 </menu>
