--- a/app/src/main/res/layout/view_curso_row.xml
+++ b/app/src/main/res/layout/view_curso_row.xml
@@ -23,7 +23,7 @@
             custom:donut_text_color="#666666"
             custom:donut_finished_color="@color/primary_dark"
             custom:donut_text_size="12sp"
-            custom:donut_progress="40"/>
+            custom:donut_progress="0"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,7 +35,7 @@
             <com.brunoaybar.unofficalupc.components.base.BaseTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Course name"
+                android:text="@string/text_loading_course_details"
                 android:maxLines="2"
                 android:id="@+id/tviCourseName"
                 android:textSize="18sp"/>
@@ -43,7 +43,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
-                android:text="Formula"
                 android:id="@+id/tviFormula"/>
             </LinearLayout>
 
