--- a/app/src/main/res/layout/view_schedule_event.xml
+++ b/app/src/main/res/layout/view_schedule_event.xml
@@ -1,76 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:background="?android:attr/selectableItemBackground"
+    android:layout_margin="8dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="8dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="8dp"
+        android:paddingLeft="8dp">
+
+        <com.brunoaybar.unofficalupc.components.base.BaseTextView
+            android:id="@+id/tviCodeAndSection"
+            android:layout_width="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_height="wrap_content"
+            android:text="MA235 - CX43"
+            android:textSize="12sp"
+            android:textColor="@color/secondary_text" />
+
+
+        <com.brunoaybar.unofficalupc.components.base.BaseTextView
+            android:id="@+id/tviName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#3c3c3c"
+            android:textSize="16sp"
+            android:text="Calculo II"
+            android:layout_marginBottom="4dp"
+            android:gravity="left"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="8dp"
-            android:paddingLeft="8dp">
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/ic_location_on_white_24dp"/>
 
             <com.brunoaybar.unofficalupc.components.base.BaseTextView
-                android:id="@+id/tviCodeAndSection"
+                android:id="@+id/tviPlace"
                 android:layout_width="match_parent"
-                android:layout_gravity="center_vertical"
+                android:layout_gravity="center"
                 android:layout_height="wrap_content"
-                android:text="MA235 - CX43"
-                android:textSize="12sp"
+                android:text="SI-A204"
+                android:layout_marginLeft="4dp"
                 android:textColor="@color/secondary_text" />
 
-
-            <com.brunoaybar.unofficalupc.components.base.BaseTextView
-                android:id="@+id/tviName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#3c3c3c"
-                android:textSize="16sp"
-                android:text="Calculo II"
-                android:layout_marginBottom="4dp"
-                android:gravity="left"/>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
-                    android:layout_gravity="center"
-                    app:srcCompat="@drawable/ic_location_on_white_24dp"/>
-
-                <com.brunoaybar.unofficalupc.components.base.BaseTextView
-                    android:id="@+id/tviPlace"
-                    android:layout_width="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_height="wrap_content"
-                    android:text="SI-A204"
-                    android:layout_marginLeft="4dp"
-                    android:textColor="@color/secondary_text" />
-
-            </LinearLayout>
         </LinearLayout>
+    </LinearLayout>
 
-        <View
-            android:id="@+id/viewColorIndicator"
-            android:layout_width="4dp"
-            android:layout_height="24dp"
-            android:background="#44ff0000"/>
+    <View
+        android:id="@+id/viewColorIndicator"
+        android:layout_width="4dp"
+        android:layout_height="24dp"
+        android:background="#44ff0000"/>
 
-    </android.support.v7.widget.CardView>
-
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
