--- a/app/src/main/res/menu/menu_course.xml
+++ b/app/src/main/res/menu/menu_course.xml
@@ -7,4 +7,10 @@
         android:title="@string/action_classmates"
         android:icon="@drawable/ic_people_outline_white_24dp"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_calculate"
+        android:orderInCategory="100"
+        android:title="@string/action_calculate"
+        android:icon="@drawable/ic_calculator"
+        app:showAsAction="always" />
 </menu>
