--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@drawable/upc_background"
     tools:context="com.brunoaybar.unofficalupc.modules.auth.LoginActivity">
+
+    <ImageView
+        android:id="@+id/iviBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/upc_red_background"
+        android:scaleType="fitXY"/>
 
 
     <LinearLayout
@@ -20,7 +28,7 @@
         <ImageView
             android:layout_width="@dimen/activity_login_logo_size"
             android:layout_height="@dimen/activity_login_logo_size"
-            app:srcCompat="@drawable/ic_logo"
+            app:srcCompat="@drawable/upc_white_logo"
             android:layout_gravity="center_horizontal"
             android:id="@+id/iviLogo" />
 
@@ -28,17 +36,20 @@
             android:id="@+id/tviWarning"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="74dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginBottom="24dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:textAlignment="center"
             android:visibility="gone"
+            android:textColor="@color/white"
             android:text="@string/text_warning_application" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginTop="16dp"
             android:visibility="gone"
             android:id="@+id/llaForm">
             <android.support.design.widget.TextInputLayout
@@ -73,23 +84,37 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            <Button
+                <CheckBox
+                    android:id="@+id/cboRemember"
+                    android:checked="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <com.brunoaybar.unofficalupc.components.base.BaseTextView
+                    android:text="@string/text_remember"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+            <com.brunoaybar.unofficalupc.components.base.BaseButton
                 android:id="@+id/btnLogin"
                 style="@style/PositiveButton"
                 android:layout_margin="16dp"
                 android:text="@string/text_login" />
 
-
         </LinearLayout>
 
         <com.brunoaybar.unofficalupc.components.base.BaseButton
             android:id="@+id/btnUnderstood"
-            style="@style/PositiveButton"
-            android:layout_margin="16dp"
+            style="@style/PositiveButton.Contrast"
             android:text="@string/text_understood"
-            android:visibility="gone" />
-
+            android:visibility="visible" />
 
     </LinearLayout>
 
